import { UUID } from "../types";

export interface IAnimalVaccine {
    vaccine: UUID;
    date: string;
}