import { UUID } from "../../types";

export interface VaccineDTO {
    id: UUID;
    name: string;
}
