export enum Layout {
    Cards = "Cards",
    Table = "Table",
}
