export enum Size {
    Small = "Smalls",
    Medium = "Medium",
    Big = "Big",
}
